add working password featured

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,14 @@
   </head>
 
   <body>
+    <div class="container">
+      <div id="user_header">
+        <%= link_to "Sign Up", new_user_path %>
+      </div>
+
+    </div>
+
+
     <%= yield %>
   </body>
 </html>
